# GitAmour

./: CHANGELOG.md  README.md  config.yaml  gitamour.py  pyproject.toml  wuv_broadcast.py
.github/workflows/: gitamour.yml
gitamour/: animation.py  cli.py  config.py  messages.py  streak.py  valentine.py
gitamour/cli/: main.py
gitamour/core/: profile.py
gitamour/services/: matching.py
gitamour/utils/: logging.py
protocol/: GITAMOUR_PROTOCOL_v1.md
tests/: test_smoke.py
